<resources>
    <string name="app_name">ListKeeper</string>
    <string name="str_add_drop">Add a drop</string>
    <string name="hint_et_drop">What is it?</string>
    <string name="str_add_it">Add It</string>
    <string name="add">Add</string>
    <string name="most_time_remaining">Most time remaining</string>
    <string name="least_time_remaining">Least time remaining</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="_2017">2017</string>
    <string name="_01">01</string>
    <string name="jan">Jan</string>
    <string name="sans_serif_thin">sans-serif-thin</string>
    <string name="tv_9">9</string>
    <string name="tv_30">30</string>
</resources>
